# jira_api

./: .gitignore  README.md  pby_jira.py  pby_jira_v2.py  pyproject.toml  test.py
.github/workflows/: black.yml  combined.yml  flake8.yml  isort.yml  lint.yml  pr-semantic-title-enforce.yml  readme-to-html.yml  ruff-format-push.yml  ruff-lint-push.yml
dags/: utils.py
dags/common/: README.md  README_template.md  config.yaml  vars.py
dags/composer-workflows-registry-pruning/: README.md  dag.py
dags/example-basics/: README.md  dag.py
dags/example-sns/: dag.py
dags/example-trigger/: child.py  parent.py
dags/experimental-workflows-alerts/: dag.py
dags/experimental-workflows-neural-prophet/: README.md  config.yaml  dag.py
dags/experimental-workflows-reviews/: README.md  config.yaml  dag.py
dags/experimental-workflows-visits-estimation-hourly/: README.md  config.yaml  dag.py
dags/misc-hourly-backfill/: config.yaml  dag.py
dags/misc-workflows-materialized-views/: README.md  config.yaml  dag.py
dags/misc-workflows-np-validation-test/: baseline.py
dags/misc-workflows-sample-send-aws/: dag.py
dags/misc-workflows-send2postgres-append/: config.yaml
dags/misc-workflows-send2postgres-append-batch/: README.md  config.yaml
dags/misc-workflows-send2postgres-overwrite-batch/: config.yaml  dag.py
dags/misc-workflows-site-analysis/: README.md  config.yaml  dag.py
dags/misc-workflows-sns-sample/: dag.py
dags/misc-workflows-trade-area/: dag.py
dags/processes-daily-validation-temp/: config.yaml  dag.py
dags/processes-daily-visits-estimation/: README.md  config.yaml  dag.py
dags/processes-monthly-update-agg-stats/: README.md  config.yaml  dag.py
dags/processes-monthly-update-cameo-profiles/: README.md  config.yaml  dag.py
dags/processes-monthly-update-cameo-profiles-backfill/: config.yaml  dag.py
dags/processes-monthly-update-demographics/: config.yaml  dag.py
dags/processes-monthly-update-manually-add-pois/: README.md  dag.py
dags/processes-monthly-update-networks/: README.md  config.yaml  dag.py
dags/processes-monthly-update-networks-backfill/: README-datascience.md  config.yaml  dag.py
dags/processes-monthly-update-trigger/: README.md  dag.py
dags/processes-monthly-update-visitor-destination/: config.yaml  dag.py
dags/processes-monthly-update-visitor-destination-backfill/: config.yaml  dag.py
dags/processes-monthly-update-visits-estimation/: README.md  config.yaml  dag.py  metrics_dag.py  metrics_vis_dag.py
dags/processes-monthly-update-void-market-preprocess/: config.yaml  dag.py
dags/processes-smc/: dag.py
dags/processes-smc-block-daily-estimation/: US_EXPANSION.md  dag.py
dags/processes-smc-block-daily-estimation-scaling/: README.md  dag.py
dags/processes-smc-block-groundtruth-scaling/: dag.py
(+1442 files in other folders)
