[tool.poetry]
name = "dags"
version = "1.0.0"
description = "Contains all DAGs"
authors = ["Kartikey Mullick <kartikey@olvin.com>"]
readme = "README.md"

[tool.ruff]
output-format = "github" # ideal for github

# match black
line-length = 150
target-version = "py310"
lint.select = [
    "E",    # PEP 8 rules
    "F",    # Additional errors not specific to PEP 8
    "I"     # Import sorting rules (codes starting with I)
]
lint.ignore = [
    #### specific rules
    "E501",     # Line too long ignore
    "E203",     # Added to avoid conflict of codes
    "D203",
    "D213",
    "COM812",
    "ISC001"
]