[tool.poetry]
name = "dags"
version = "1.0.0"
description = "Contains all DAGs"
authors = ["Kartikey Mullick <kartikey@olvin.com>"]
readme = "README.md"

[tool.ruff]
output-format = "github" # ideal for github

# match black
line-length = 150
target-version = "py310"
lint.select = [
    "E",    # PEP 8 rules
    "F",    # Additional errors not specific to PEP 8
    "I"     # Import sorting rules (codes starting with I)
]
lint.ignore = [
    #### specific rules to ignore
    "E501",     # Line too long ignore
    "E203",     # Added to avoid conflict of codes
    "E117",     # Over indented
    "E114",     # Indentation with invalid multiple comment
    "E111",     # Indentation with invalid multiple
    "ISC001",   # Single line implicit string concatenation
    "ISC002",   # Multi line implicit string concatenation
]