[tool.poetry]
name = "dags"
version = "1.0.0"
description = "Contains all DAGs"
authors = ["Kartikey Mullick <kartikey@olvin.com>"]
readme = "README.md"

[tool.ruff]
output-format = "github" # ideal for github

# match black
line-length = 150
target-version = "py310"
lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PL",  # pylint
    "RUF", # ruff-specific rules
]
lint.ignore = [
    #### specific rules to ignore
    "E501",     # Line too long ignore
    "E203",     # Added to avoid conflict of codes
    "E117",     # Over indented
    "E114",     # Indentation with invalid multiple comment
    "E111",     # Indentation with invalid multiple
    "ISC001",   # Single line implicit string concatenation
    "ISC002",   # Multi line implicit string concatenation
]

lint.isort.known-first-party = [
    "airflow"
]

lint.flake8-bugbear.extend-immutable-calls = [
    "airflow.models.DAG"
]

lint.pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
"__init__.py" = ["E402"]